<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
			<TextView
			    android:id="@+id/tvSubject"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:text="@string/subject" />
			
			 <EditText
	            android:id="@+id/etSubject"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:ems="10" >

            	<requestFocus />
        	</EditText>
        </RelativeLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
			<TextView
			    android:id="@+id/tvAmount"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:text="@string/amount" />
			
			 <EditText
			     android:id="@+id/etAmount"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:layout_alignParentRight="true"
			     android:ems="10"
			     android:inputType="number" >

        </EditText>

        </RelativeLayout>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spType"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:entries="@array/entry_types"
                android:prompt="@string/pick_entry_type" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/type" />

        </RelativeLayout>
        
    </TableRow>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_entry" />

    

</TableLayout>